docs: fix container spacings

--- a/packages/core/src/storybook/stand-alone-documentaion/welcome/hero/Hero.module.scss
+++ b/packages/core/src/storybook/stand-alone-documentaion/welcome/hero/Hero.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 120px;
+  margin-top: 24px;
 
   .header {
     color: #121212;
