--- a/packages/storybook-blocks/src/components/component-name/component-name.module.scss
+++ b/packages/storybook-blocks/src/components/component-name/component-name.module.scss
@@ -9,5 +9,5 @@
   letter-spacing: -0.24px;
   text-align: left;
   color: var(--sb-primary-text-color);
-  margin: var(--sb-space-24) 0;
+  margin: 0;
 }
